# stanley-rs

./: .gitignore  Cargo.toml  README.md  build.sh  new_post.exs  new_post.py  publish.sh
.github/: dependabot.yml
src/: main.rs
