[package]
name = "stanley-rs"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
glob = "0.3"
maud = "0.25"
once_cell = "1.18"
pulldown-cmark = { version = "0.9", default-features = false, features = [
    "simd",
] }
regex = "1.9"
rss = "2.0"

[profile.release]
codegen-units = 1
lto = true
